_assets/promo/promo.scss
.promo {
    &__row {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;

        @media screen and (min-width: $screen-md-min) {
            flex-wrap: nowrap;
            flex-direction: row;
        }
    }

    &__col {
        width: 100%;
        display: inline-flex;
        flex-wrap: wrap;
        flex-direction: column;
        justify-content: space-between;
        position: relative;
        z-index: 2;

        @media screen and (min-width: $screen-md-min) {
            flex-wrap: nowrap;
            flex-direction: row;
            width: 71.1%;
            align-items: center;

            &--left {
                width: 100%;
                margin-right: -34.4%;
            }
        }

        &--left {
            z-index: 2;
        }

        &--right {
            z-index: 1;
            text-align: right;
        }
    }

    &__text {
        width: 330px;
        max-width: 50%;
        flex-shrink: 0;
    }

    &__image-wrap {
        display: block;
        max-height: 100vh;
    }

    &__col--left &__image-wrap {
        transform: translate(-16.3%, 3.7%);
    }

    &__col--right &__image-wrap {
        order: -1;
        transform: translate(-4.1%, 16.6%);
    }

    &__image {
        display: block;
        max-width: 100%;
        transition: 0.2s all ease;
        transform-origin: top center;

        &.focused {
            transform: scale(1.01);
        }

        &.blured {
            filter: blur(2px);
        }
    }

    &__btn {
        display: inline-flex;
        align-items: center;

        &-icon {
            display: block;
            width: 7px;
            height: 13px;
            color: inherit;
            margin-left: 25px;
            margin-top: 2px;

            svg {
                display: block;
                max-width: 100%;
                fill: currentColor;
                color: currentColor;
            }
        }
    }

    &__title {
        font-size: 3.14rem;
        color: $title-color-main;
        letter-spacing: 1.29px;
        line-height: 1.22;
        font-weight: 900;
        text-transform: uppercase;
        margin-bottom: 0.5em;
    }

    &__col--right &__title {
        color: $title-color-secondary;
    }

    &__sub-title {
        font-size: 1.428rem;
        letter-spacing: 0.75px;
        margin-bottom: 2em;
        min-height: 3.25em;
        line-height: 1.63;
    }
}

